--- a/donationparty/templates/round_running.xhtml
+++ b/donationparty/templates/round_running.xhtml
@@ -1,3 +1,6 @@
+{% extends "base.xhtml" %}
+
+{% block content %}
 Here's what's happening with this round.
 
 Pay:
@@ -5,3 +8,4 @@ Pay:
 <script src="https://button.stripe.com/v1/button.js" class="stripe-button"
         data-key="{{ settings.STRIPE_PUBLISHABLE }}"></script>
 
+{% endblock %}
