Fixed: static paths

--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Donation Party! Make a difference and have the chance to win something awesome.</title>
-		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="css/app.css" rel="stylesheet" media="screen">
+		<link href="/mediafiles/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="/mediafiles/css/app.css" rel="stylesheet" media="screen">
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Make a difference and have the chance to win something awesome.">
