--- a/donationparty/templates/round_create.xhtml
+++ b/donationparty/templates/round_create.xhtml
@@ -10,19 +10,19 @@
 <form action="">
 	<ul class="charities">
 		<li class="charity">
-			<label><input type="radio" name="charity" value="eff" /><img src="img/eff.png" /> <span>EFF</span></label>
+			<label><input type="radio" name="charity" value="eff" /><img src="/mediafiles/img/eff.png" /> <span>EFF</span></label>
 		</li>
 		<li class="charity">
-			<label><input type="radio" name="charity" value="childsplay" /><img src="img/childsplay.png" /> <span>Childs Play</span></label>
+			<label><input type="radio" name="charity" value="childsplay" /><img src="/mediafiles/img/childsplay.png" /> <span>Childs Play</span></label>
 		</li>
 		<li class="charity">
-			<label><input type="radio" name="charity" value="redcross" /><img src="img/redcross.png" /> <span>Red Cross</span></label>
+			<label><input type="radio" name="charity" value="redcross" /><img src="/mediafiles/img/redcross.png" /> <span>Red Cross</span></label>
 		</li>
 		<li class="charity">
-			<label><input type="radio" name="charity" value="oxfam" /><img src="img/oxfam.png" /> <span>Oxfam</span></label>
+			<label><input type="radio" name="charity" value="oxfam" /><img src="/mediafiles/img/oxfam.png" /> <span>Oxfam</span></label>
 		</li>
 		<li class="charity">
-			<label><input type="radio" name="charity" value="greenpeace" /><img src="img/greenpeace.png" /> <span>Greenpeace</span></label>
+			<label><input type="radio" name="charity" value="greenpeace" /><img src="/mediafiles/img/greenpeace.png" /> <span>Greenpeace</span></label>
 		</li>
 	</ul>
 	
@@ -36,6 +36,6 @@
 	<p class="smallprint">*we automatically pick and ship a random item from Amazon, so you never know what you might win!</p>
 </form>
 
-<script src="js/create.js"></script>
+<script src="/mediafiles/js/create.js"></script>
 
 {% endblock %}
