Fixed: Added javascript content block

--- a/donationparty/templates/round_create.xhtml
+++ b/donationparty/templates/round_create.xhtml
@@ -36,6 +36,8 @@
 	<p class="smallprint">*we automatically pick and ship a random item from Amazon, so you never know what you might win!</p>
 </form>
 
-<script src="/mediafiles/js/create.js"></script>
+{% endblock %}
 
+{% block javascript %}
+	<script src="/mediafiles/js/create.js"></script>
 {% endblock %}
