--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -22,5 +22,7 @@
 		<script src="/mediafiles/vendor/underscore-1.4.2.min.js"></script>
 		<script src="/mediafiles/vendor/backbone-0.9.2.min.js"></script>
 		<script src="/mediafiles/js/base.js"></script>
+		
+		{% block javascript %}{% endblock %}
 	</body>
 </html>
