--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -12,6 +12,12 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+        <script>
+        var DP = {};
+        DP.Round = {
+            'url': "{{ round.url }}"
+        };
+        </script>
 	</head>
 	<body>
 		<div class="container-narrow">
@@ -21,6 +27,7 @@
 		<script src="/mediafiles/vendor/jquery-1.8.3.min.js"></script>
 		<script src="/mediafiles/vendor/underscore-1.4.2.min.js"></script>
 		<script src="/mediafiles/vendor/backbone-0.9.2.min.js"></script>
+		<script src="/mediafiles/vendor/pusher.min.js"></script>
 		<script src="/mediafiles/js/base.js"></script>
 		
 		{% block javascript %}{% endblock %}
