--- a/donationparty/templates/round_running.xhtml
+++ b/donationparty/templates/round_running.xhtml
@@ -8,4 +8,10 @@ Pay:
 <script src="https://button.stripe.com/v1/button.js" class="stripe-button"
         data-key="{{ settings.STRIPE_PUBLISHABLE }}"></script>
 
+
+<div class="social">
+    <div class="fb-send"></div>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
+</div>
+
 {% endblock %}
