--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -72,6 +72,30 @@ body {
 	margi: 30px 0;
 }
 
+.players {
+    .player {
+        position: relative;
+        
+        img {
+            position: absolute;
+            width: 100px;
+            height: 100px;
+        }
+        
+        p.name {
+            padding-left: 120px;
+            
+            .amount {
+                width: 120px;
+                float: right;
+                line-height: 100px;
+                font-size: 20px;
+                font-weight: bold;
+            }
+        }
+    }
+}
+
 .smallprint {
 	color: #aaa;
 	text-align: center;
