--- a/donationparty/templates/round_create.xhtml
+++ b/donationparty/templates/round_create.xhtml
@@ -27,7 +27,7 @@
 		</li>
 	</ul>
 	
-	<h3>Invite your friends<h3/>
+	<h3>Invite your friends</h3>
 	<textarea name="emails" class="emails"></textarea>
 	<p>(Or use Facebook and Twitter on the next screen)</p>
 	
