Re-adding pusher.

--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -37,6 +37,7 @@
         <script src="/mediafiles/vendor/jquery-1.8.3.min.js"></script>
         <script src="/mediafiles/vendor/underscore-1.4.2.min.js"></script>
         <script src="/mediafiles/vendor/backbone-0.9.2.min.js"></script>
+        <script src="/mediafiles/vendor/pusher.min.js"></script>
         <script src="/mediafiles/js/base.js"></script>
         
         <!-- Social Plugins -->
