--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -1,5 +1,4 @@
 @import 'elements';
-@import 'tokeninput';
 
 body {
 	padding-top: 20px;
@@ -101,4 +100,12 @@ body {
 	color: #aaa;
 	text-align: center;
 	margin: 30px 0;
+}
+
+.social {
+	margin: 30px 0;
+	text-align: center;
+	input {
+		width: 300px;
+	}
 }
