--- a/donationparty/templates/round_create.xhtml
+++ b/donationparty/templates/round_create.xhtml
@@ -27,12 +27,9 @@
 		</li>
 	</ul>
 	
-	<h3>Invite your friends</h3>
-	<textarea name="emails" class="emails"></textarea>
-	<p>(Or use Facebook and Twitter on the next screen)</p>
 	
 	<div class="start-party">
-		<input type="submit" class="btn btn-large btn-success" value="Invite &amp; Start!" />
+		<input type="submit" class="btn btn-large btn-success" value="Start the party!" />
 	</div>
 	
 	<p class="smallprint">*we automatically pick and ship a random item from Amazon, so you never know what you might win!</p>
