--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -17,12 +17,12 @@ body {
 .jumbotron {
 	margin: 60px 0;
 	text-align: center;
-	
+
 	h1 {
 		font-size: 72px;
 		line-height: 1;
 	}
-	
+
 	.btn {
 		font-size: 21px;
 		padding: 14px 24px;
@@ -34,32 +34,32 @@ body {
 	padding: 0;
 	float: left;
 	width: 100%;
-	
+
 	.charity {
 		display: inline-block;
 		width: 20%;
 		height: 120px;
 		text-align: center;
 		float: left;
-		
+
 		img {
 			width: 100px;
 			height: 100px;
 		}
-		
+
 		label {
 			border-bottom: 5px solid transparent;
 			height: 120px;
 		}
 	}
-	
+
 	.charity.checked {
 		label {
 			background: #f5f5f5;
 			border-bottom: 5px solid #5bb75b;
 		}
 	}
-	
+
 	.charity:hover {
 		label {
 			background: #f1f1f1;
@@ -75,16 +75,16 @@ body {
 .players {
     .player {
         position: relative;
-        
+
         img {
             position: absolute;
             width: 100px;
             height: 100px;
         }
-        
+
         p.name {
             padding-left: 120px;
-            
+
             .amount {
                 width: 120px;
                 float: right;
@@ -108,4 +108,19 @@ body {
 	input {
 		width: 300px;
 	}
+}
+
+.stripe-button-inner {
+	margin-left: 294px !important;
+}
+
+.lead.running {
+	img {
+		float: left;
+		margin-right: 30px;
+		width: 60px;
+		height: 60px;
+	}
+	text-align: left;
+	overflow: hidden;
 }
