--- a/donationparty/templates/round_running.xhtml
+++ b/donationparty/templates/round_running.xhtml
@@ -19,7 +19,7 @@
 	<p>
 	Invite friends by sharing this page:
 	</p>
-	<input type="text" value="{{ request.build_absolute_uri }}" />
+	<input type="text" value="{{ request.build_absolute_uri }}" readonly="readonly" />
 	<div class="buttons">
 	    <div class="fb-send"></div>
 	    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-count="none" data-text="Party time! Excellent! {{request.build_absolute_uri }}">Tweet</a>
