--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -31,7 +31,7 @@
             <hr>
             
             <div class="footer">
-                <p>Made with sundried tomatoes and various cheeses by @blah, @blah, @tommoor and @blah</p>
+                <p>Made with sundried tomatoes and various cheeses by @blah, @blah, @tommoor and @juliansimioni</p>
             </div>
         </div>
 
