Add hack to the future link
	server.orig.crt

--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -31,7 +31,7 @@
             <hr>
             
             <div class="footer">
-                <p>Made with sundried tomatoes and various cheeses by @blah, @blah, @tommoor and @juliansimioni</p>
+		    <p>Made with sundried tomatoes and various cheeses by @blah, @blah, @tommoor and @juliansimioni, for the Stripe <a href="https://stripe.com/blog/hack-to-the-future">Hack to the Future</a> hackathon.</p>
             </div>
         </div>
 
