Text and style changes on create and running pages

--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -30,7 +30,7 @@ body {
 }
 
 .charities {
-	margin: 0 0 30px;
+	margin: 0 0 60px;
 	padding: 0;
 	float: left;
 	width: 100%;
@@ -104,9 +104,16 @@ body {
 
 .social {
 	margin: 30px 0;
+	background-color: #F1F1F1;
 	text-align: center;
+	.rounded(10px);
+	padding: 15px;
 	input {
+		background-color: #FFF;
 		width: 300px;
+	}
+	.fb-send {
+		top: -3px;
 	}
 }
 
@@ -123,4 +130,8 @@ body {
 	}
 	text-align: left;
 	overflow: hidden;
+}
+
+.footer {
+	text-align: center;
 }
