--- a/donationparty/templates/round_create.xhtml
+++ b/donationparty/templates/round_create.xhtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
 	<h1>Donation Party!</h1>
-	<p class="lead">Invite friends to donate a random (bounded) amount to a charity and one lucky winner will receive something awesome* from Amazon!</p>
+	<p class="lead">Invite friends to donate a randomly selected amount (up to $10) to charity and one lucky winner will receive something awesome* from Amazon!</p>
 </div>
 
 <form action="" method="POST">
