--- a/donationparty/media/css/app.css
+++ b/donationparty/media/css/app.css
@@ -3,7 +3,7 @@ body{padding-top:20px;padding-bottom:40px;}
 .container-narrow>hr{margin:30px 0;}
 .jumbotron{margin:60px 0;text-align:center;}.jumbotron h1{font-size:72px;line-height:1;}
 .jumbotron .btn{font-size:21px;padding:14px 24px;}
-.charities{margin:0 0 30px;padding:0;float:left;width:100%;}.charities .charity{display:inline-block;width:20%;height:120px;text-align:center;float:left;}.charities .charity img{width:100px;height:100px;}
+.charities{margin:0 0 60px;padding:0;float:left;width:100%;}.charities .charity{display:inline-block;width:20%;height:120px;text-align:center;float:left;}.charities .charity img{width:100px;height:100px;}
 .charities .charity label{border-bottom:5px solid transparent;height:120px;}
 .charities .charity.checked label{background:#f5f5f5;border-bottom:5px solid #5bb75b;}
 .charities .charity:hover label{background:#f1f1f1;}
@@ -11,6 +11,8 @@ body{padding-top:20px;padding-bottom:40px;}
 .players .player{position:relative;}.players .player img{position:absolute;width:100px;height:100px;}
 .players .player p.name{padding-left:120px;}.players .player p.name .amount{width:120px;float:right;line-height:100px;font-size:20px;font-weight:bold;}
 .smallprint{color:#aaa;text-align:center;margin:30px 0;}
-.social{margin:30px 0;text-align:center;}.social input{width:300px;}
+.social{margin:30px 0;background-color:#F1F1F1;text-align:center;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px;-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box;padding:15px;}.social input{background-color:#FFF;width:300px;}
+.social .fb-send{top:-3px;}
 .stripe-button-inner{margin-left:294px !important;}
 .lead.running{text-align:left;overflow:hidden;}.lead.running img{float:left;margin-right:30px;width:60px;height:60px;}
+.footer{text-align:center;}
