Tidied file imports, added background colour, bootstrap for flatstrap

--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -1,8 +1,11 @@
 @import 'elements';
+@import '../css/bootstrap.css';
+@import '../css/bootstrap-responsive.css';
 
 body {
 	padding-top: 20px;
 	padding-bottom: 40px;
+	background: #fdfbf1;
 }
 
 .container-narrow {
@@ -19,8 +22,9 @@ body {
 	text-align: center;
 
 	h1 {
-		font-size: 72px;
+		font-size: 60px;
 		line-height: 1;
+		text-shadow: 0 1px 0 #fff;
 	}
 
 	.btn {
