--- a/donationparty/media/css/app.css
+++ b/donationparty/media/css/app.css
@@ -1,7 +1,9 @@
-body{padding-top:20px;padding-bottom:40px;}
+@import '../css/bootstrap.css';
+@import '../css/bootstrap-responsive.css';
+body{padding-top:20px;padding-bottom:40px;background:#fdfbf1;}
 .container-narrow{margin:0 auto;max-width:700px;}
 .container-narrow>hr{margin:30px 0;}
-.jumbotron{margin:60px 0;text-align:center;}.jumbotron h1{font-size:72px;line-height:1;}
+.jumbotron{margin:60px 0;text-align:center;}.jumbotron h1{font-size:60px;line-height:1;text-shadow:0 1px 0 #fff;}
 .jumbotron .btn{font-size:21px;padding:14px 24px;}
 .charities{margin:0 0 60px;padding:0;float:left;width:100%;}.charities .charity{display:inline-block;width:20%;height:120px;text-align:center;float:left;}.charities .charity img{width:100px;height:100px;}
 .charities .charity label{border-bottom:5px solid transparent;height:120px;}
