--- a/donationparty/templates/round_running.xhtml
+++ b/donationparty/templates/round_running.xhtml
@@ -7,13 +7,59 @@
 
 	<p class="lead running"><img src="/mediafiles/img/eff.png" />Securely donate a randomly selected amount up to <strong>$10</strong>. The person who donates the most wins something cool from Amazon.</p>
 
-<form action="/charge" method="post" id="stripe_payment_form">
+<form action="/charge" method="post" id="payment-form">
     {% csrf_token %}
+    <div class="NB-creditcards">
+        <img src="https://manage.stripe.com/img/credit_cards/visa.png">
+        <img src="https://manage.stripe.com/img/credit_cards/mastercard.png">
+        <img src="https://manage.stripe.com/img/credit_cards/amex.png">
+        <img src="https://manage.stripe.com/img/credit_cards/discover.png">
+    </div>
     <input type="hidden" name="round_id" value="{{ round.url }}" />
-    <script src="https://button.stripe.com/v1/button.js" class="stripe-button"
-        data-key="{{ settings.STRIPE_PUBLISHABLE }}"
-	data-label="Donate"
-        data-addres></script>
+    <span class="payment-errors"></span>
+    <div class="form-row">
+        <label for="donator-name">Your name</label>
+        <input type="text" name="name" id="donator-name" />
+    </div>
+    <div class="form-row">
+        <label for="donator-email">Your email</label>
+        <input type="text" name="email" id="donator-email" />
+    </div>
+    <div class="form-row">
+        <label for="card-number">Card number</label>
+        <input type="text" size="20" autocomplete="off" class="card-number" id="card-number" />
+    </div>
+    <div class="form-row">
+        <label>CVC</label>
+        <input type="text" size="4" autocomplete="off" class="card-cvc" />
+    </div>
+    <div class="form-row">
+        <label>Expiration</label>
+        <select class="card-expiry-month">
+            <option value="01">01 - January</option>
+            <option value="02">02 - February</option>
+            <option value="03">03 - March</option>
+            <option value="04">04 - April</option>
+            <option value="05">05 - May</option>
+            <option value="06">06 - June</option>
+            <option value="07">07 - July</option>
+            <option value="08">08 - August</option>
+            <option value="09">09 - September</option>
+            <option value="10">10 - October</option>
+            <option value="11">11 - November</option>
+            <option value="12">12 - December</option>
+        </select>
+        <select class="card-expiry-year">
+            <option value="2012">2012</option>
+            <option value="2013">2013</option>
+            <option value="2014">2014</option>
+            <option value="2015">2015</option>
+            <option value="2016">2016</option>
+            <option value="2017">2017</option>
+            <option value="2018">2018</option>
+        </select>
+    </div>
+    <button type="submit" class="submit-button">Submit Payment</button>
 </form>
 
 {% render_donations round.donations.all %}
