--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -10,7 +10,7 @@ body {
 
 .container-narrow {
 	margin: 0 auto;
-	max-width: 700px;
+	max-width: 760px;
 }
 
 .container-narrow > hr {
@@ -31,6 +31,12 @@ body {
 		font-size: 21px;
 		padding: 14px 24px;
 	}
+}
+
+.boxed {
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+	background: #fff;
+	margin-bottom: 20px;
 }
 
 .charities {
@@ -100,6 +106,10 @@ body {
     }
 }
 
+hr {
+	border-top: 1px solid darken(#fdfbf1, 10%);
+}
+
 .smallprint {
 	color: #aaa;
 	text-align: center;
@@ -107,16 +117,22 @@ body {
 }
 
 .social {
-	margin: 30px 0;
-	background-color: #F1F1F1;
-	text-align: center;
-	.rounded(10px);
-	padding: 15px;
+	margin: 30px 0 0;
+	font-size: 14px;
+	height: 65px;
+	
+	label {
+		font-weight: bold;
+	}
+	
 	input {
 		background-color: #FFF;
 		width: 300px;
+		margin-right: 10px;
 	}
+	
 	.fb-send {
+		position: relative;
 		top: -3px;
 	}
 }
@@ -126,14 +142,26 @@ body {
 }
 
 .lead.running {
+	text-align: left;
+	padding: 20px 20px 20px 100px;
+	position: relative;
+	
 	img {
-		float: left;
-		margin-right: 30px;
+		position: absolute;
+		top: 20px;
+		left: 20px;
 		width: 60px;
 		height: 60px;
 	}
-	text-align: left;
-	overflow: hidden;
+}
+
+#payment-form {
+	padding: 20px;
+	
+	img {
+		width: 21px;
+		height: 14px;
+	}
 }
 
 .footer {
