--- a/donationparty/templates/donations.xhtml
+++ b/donationparty/templates/donations.xhtml
@@ -1,10 +1,9 @@
 {% for donation in donations %}
-    <div class="DP-donation">
-        <div class="DP-donation-name">{{ donation.name }}</div>
+    <li class="DP-donation">
         <div class="DP-donation-avatar">
             <img class="DP-donation-avatar-photo" src="{{ donation.gravatar_url }}">
         </div>
-        <div class="DP-donation-name">{{ donation.amount }}</div>
-        <div class="DP-donation-name">{{ donation.stripe_token }}</div>
-    </div>
+        <h3 class="DP-donation-name">{{ donation.name }}</h3>
+        <p class="DP-donation-amount">{{ donation.amount }}</p>
+    </li>
 {% endfor %}
