Real-time hooked up to re-render donation templates.

--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -20,6 +20,7 @@
         DP.Round = {
             'url': "{{ round.url }}"
         };
+        DP.PUSHER_KEY = "{{ settings.PUSHER_KEY }}";
         </script>
     </head>
     <body>
