--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -162,6 +162,12 @@ hr {
 		width: 21px;
 		height: 14px;
 	}
+	
+	h3 {
+		margin: 0 -20px 10px;
+		padding: 0 20px;
+		background: #efefef;
+	}
 }
 
 .footer {
