--- a/donationparty/media/css/app.css
+++ b/donationparty/media/css/app.css
@@ -20,6 +20,15 @@ hr{border-top:1px solid #f7eec4;}
 .social .fb-send{position:relative;top:-3px;}
 .stripe-button-inner{margin-left:294px !important;}
 .lead.running{text-align:left;padding:20px 20px 20px 100px;position:relative;}.lead.running img{position:absolute;top:20px;left:20px;width:60px;height:60px;}
-#payment-form{padding:20px;}#payment-form img{width:21px;height:14px;}
-#payment-form h3{margin:0 -20px 10px;padding:0 20px;background:#efefef;}
-.footer{text-align:center;}
+#payment-form{padding:20px;margin:0;}#payment-form .form-row{position:relative;}
+#payment-form .NB-creditcards{position:absolute;top:0;right:0;}
+#payment-form label{margin:0 0 2px;}
+#payment-form input[type=text]{width:96%;}
+#payment-form input.card-cvc{width:30px;}
+#payment-form select.card-expiry-month{width:120px;margin-right:10px;}
+#payment-form select.card-expiry-year{width:80px;}
+#payment-form img{width:21px;height:14px;}
+#payment-form h3{margin:-20px -20px 10px;padding:5px 20px;background:#efefef;}
+#payment-form .donate{text-align:center;margin:20px 0;float:left;width:100%;}#payment-form .donate input{margin:0 auto;}
+.donations{list-style:none;}.donations li.empty{background:url('/mediafiles/img/arrow-nw.png') no-repeat left top;padding-top:130px;font-size:21px;text-align:center;color:rgba(0, 0, 0, 0.5);margin:80px 50px;line-height:1.2;}
+.footer{text-align:center;color:rgba(0, 0, 0, 0.4);}
