Taking out zebras.

--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -163,7 +163,7 @@ hr {
 		position: relative;
 	}
 	
-	.NB-creditcards {
+	.creditcards {
 		position: absolute;
 		top: 0;
 		right: 0;
@@ -190,7 +190,7 @@ hr {
 		width: 80px;
 	}
 	
-	img {
+	.creditcards img {
 		width: 21px;
 		height: 14px;
 	}
