--- a/donationparty/templates/round_running.xhtml
+++ b/donationparty/templates/round_running.xhtml
@@ -34,7 +34,7 @@
                 <input type="text" name="email" id="donator-email" />
             </div>
             <div class="form-row">
-                <div class="NB-creditcards">
+                <div class="creditcards">
                     <img src="https://manage.stripe.com/img/credit_cards/visa.png">
                     <img src="https://manage.stripe.com/img/credit_cards/mastercard.png">
                     <img src="https://manage.stripe.com/img/credit_cards/amex.png">
