--- a/donationparty/media/css/app.css
+++ b/donationparty/media/css/app.css
@@ -27,7 +27,7 @@ hr{border-top:1px solid #f7eec4;}
 #payment-form input.card-cvc{width:30px;}
 #payment-form select.card-expiry-month{width:120px;margin-right:10px;}
 #payment-form select.card-expiry-year{width:80px;}
-#payment-form img{width:21px;height:14px;}
+#payment-form .creditcards img{width:21px;height:14px;}
 #payment-form h3{margin:-20px -20px 10px;padding:5px 20px;background:#efefef;}
 #payment-form .donate{text-align:center;margin:20px 0;float:left;width:100%;}#payment-form .donate input{margin:0 auto;}
 .donations{list-style:none;}.donations li.empty{background:url('/mediafiles/img/arrow-nw.png') no-repeat left top;padding-top:130px;font-size:21px;text-align:center;color:rgba(0, 0, 0, 0.5);margin:80px 50px;line-height:1.2;}
