--- a/donationparty/media/css/app.css
+++ b/donationparty/media/css/app.css
@@ -8,7 +8,7 @@ body{padding-top:20px;padding-bottom:40px;background:#fdfbf1;}
 .boxed{box-shadow:0 1px 2px rgba(0, 0, 0, 0.4);background:#fff;margin-bottom:20px;}
 .charities{margin:0 0 60px;padding:0;float:left;width:100%;}.charities .charity{display:inline-block;width:20%;height:120px;text-align:center;float:left;}.charities .charity img{width:100px;height:100px;}
 .charities .charity label{border-bottom:5px solid transparent;height:120px;}
-.charities .charity.checked label{background:#f5f5f5;border-bottom:5px solid #5bb75b;}
+.charities .charity.checked label{background:#ffffff;border-bottom:5px solid #5bb75b;}
 .charities .charity:hover label{background:#f1f1f1;}
 .start-party{text-align:center;margi:30px 0;}
 .players .player{position:relative;}.players .player img{position:absolute;width:100px;height:100px;}
@@ -19,16 +19,19 @@ hr{border-top:1px solid #f7eec4;}
 .social input{background-color:#FFF;width:300px;margin-right:10px;}
 .social .fb-send{position:relative;top:-3px;}
 .stripe-button-inner{margin-left:294px !important;}
-.lead.running{text-align:left;padding:20px 20px 20px 100px;position:relative;}.lead.running img{position:absolute;top:20px;left:20px;width:60px;height:60px;}
+.lead.running{text-align:left;padding:20px 20px 20px 120px;position:relative;font-size:20px;}.lead.running img{position:absolute;top:20px;left:20px;width:80px;height:80px;}
 #payment-form{padding:20px;margin:0;}#payment-form .form-row{position:relative;}
-#payment-form .NB-creditcards{position:absolute;top:0;right:0;}
+#payment-form .creditcards{position:absolute;top:0;right:0;}#payment-form .creditcards img{width:21px;height:14px;}
 #payment-form label{margin:0 0 2px;}
 #payment-form input[type=text]{width:96%;}
 #payment-form input.card-cvc{width:30px;}
 #payment-form select.card-expiry-month{width:120px;margin-right:10px;}
 #payment-form select.card-expiry-year{width:80px;}
-#payment-form .creditcards img{width:21px;height:14px;}
 #payment-form h3{margin:-20px -20px 10px;padding:5px 20px;background:#efefef;}
 #payment-form .donate{text-align:center;margin:20px 0;float:left;width:100%;}#payment-form .donate input{margin:0 auto;}
+#payment-form .btn.active{background:#5bb75b url('/mediafiles/img/loading.gif') no-repeat center center;color:transparent;text-shadow:none;}
 .donations{list-style:none;}.donations li.empty{background:url('/mediafiles/img/arrow-nw.png') no-repeat left top;padding-top:130px;font-size:21px;text-align:center;color:rgba(0, 0, 0, 0.5);margin:80px 50px;line-height:1.2;}
+.donations li.DP-donation{position:relative;border-top:1px solid #fff;border-bottom:1px solid #f7eec4;}.donations li.DP-donation .DP-donation-avatar{position:absolute;top:0;left:0;}
+.donations li.DP-donation:first-child{border-top:0;}
+.donations li.DP-donation:last-child{border-bottom:0;}
 .footer{text-align:center;color:rgba(0, 0, 0, 0.4);}
