--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -30,8 +30,13 @@
             
             <hr>
             
-            <div class="footer">
-		    <p>Made with sundried tomatoes and various cheeses by <a href="https://twitter.com/samuelclay">@samuelclay<a>, <a href="https://twitter.com/elylerner">@elylerner</a>, <a href="https://twitter.com/tommoor">@tommoor</a> and <a href="https://twitter.com/juliansimioni">@juliansimioni</a>, for the Stripe <a href="https://stripe.com/blog/hack-to-the-future">Hack to the Future</a> hackathon.</p>
+            <div class="footer row-fluid">
+                <span class="span7">
+                <p>Made with sundried tomatoes and various cheeses by <a href="https://twitter.com/juliansimioni">@juliansimioni</a>, <a href="https://twitter.com/samuelclay">@samuelclay</a>, <a href="https://twitter.com/tommoor">@tommoor</a> and <a href="https://twitter.com/elylerner">@elylerner</a> for the Stripe <a href="https://stripe.com/blog/hack-to-the-future">Hack to the Future</a> hackathon.</p>
+                </span>
+                <span class="span5">
+                    
+                </span>
             </div>
         </div>
 
